force-app/main/default/objects/History__c/fields/FromDate__c.field-meta.xml
<CustomField>
    <fullName>FromDate__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>