force-app/main/default/objects/History__c/fields/InvestmentId__c.field-meta.xml
<CustomField>
    <fullName>InvestmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>History</relationshipLabel>
    <relationshipName>History</relationshipName>
    <type>Lookup</type>
</CustomField>